Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 </td>
 <td align="center"><a href="https://github.com/yadongli" class="user-mention">@yadongli</a></td>
 </tr>
+<tr>
+<td align="center">3. Linear Algebra II</td>
+<td align="center">
+<a href="Lecture3.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture3.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework3.ipynb">homework</a>
+</td>
+<td align="center"><a href="https://github.com/yadongli" class="user-mention">@yadongli</a></td>
+</tr>
 </tbody>
 </table>
 
@@ -113,6 +120,11 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 examples, illustrations and homework problems etc, are copyrighted by the instructors. Permissions are granted for
 any educational institutions to use these class materials for educational purposes, conditioned on that this github 
 page is referenced and attributed to. All other rights reserved.</p>
+
+<h2>
+<a id="acknowledgement" class="anchor" href="#acknowledgement" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Acknowledgement</h2>
+
+<p>The instructors want to thank our current and past students for pointing out many errors in the slides.  </p>
 
 <h2>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors</h2>
