Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ page is referenced and attributed to. All other rights reserved.</p>
 <h2>
 <a id="acknowledgement" class="anchor" href="#acknowledgement" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Acknowledgement</h2>
 
-<p>The instructors want to thank our current and past students for pointing out many errors in the slides.  </p>
+<p>The instructors want to thank our current and past students for pointing out many errors in the slides and homework. </p>
 
 <h2>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors</h2>
