--- a/Lecture3.slides.html
+++ b/Lecture3.slides.html
@@ -5021,8 +5021,8 @@ vucdYzMzMzMzvGNsZmZmZgY4MTYzMzMzA5wYm5mZmZkBTozNzMzMzAAnxmZmZmZmgBNjMzMzMzMA
 </ul>
 <p>Recall Cholesky decomposition $V = LL^T$: $\Sigma \delta \bs w = L \bt z \sqrt{\delta t}$: </p>
 <p>$$
-\mathbb E [\Sigma\delta \bs w (\Sigma\delta \bs w)^T] = \mathbb E[(L \delta t z \sqrt{\delta t}) (L \delta t z \sqrt{\delta t})^T ] 
-= L \mathbb E[\delta t z\delta t z^T] L^T \delta t = V \delta t
+\mathbb E [\Sigma\delta \bs w (\Sigma\delta \bs w)^T] = \mathbb E[(L \delta t \bt z \sqrt{\delta t}) (L \delta t \bt z \sqrt{\delta t})^T ] 
+= L \mathbb E[\delta t \bt z\delta t \bt z^T] L^T \delta t = V \delta t
 $$</p>
 <ul>
 <li>$\bt z$ is independent standard normal random vector.</li>
