--- a/Lecture4.slides.html
+++ b/Lecture4.slides.html
@@ -5888,9 +5888,8 @@ $$\small \left(\begin{matrix}f{\left (1 \right )}\\\dot{f}{\left (1 \right )}\\\
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
 <li>Note the short-handed notation of $\ddot{f}(1) = \frac{d^2f(t)}{d t^2} \rvert _{t=1}$ etc. </li>
-<li>Like cubic spline, there are $4(n-1)$ variables and constraints</li>
-<li>Solvable as a $4(n-1)$ dimensional linear systems </li>
-<li>However, we can do much better.</li>
+<li>Like cubic spline, there are $4(n-1)$ variables and constraints, $\lambda$ is a known constant</li>
+<li>Solvable as a $4(n-1)$ dimensional linear systems ~ $O((4n)^3)$</li>
 </ul>
 </div>
 </div>
