--- a/Lecture3.slides.html
+++ b/Lecture3.slides.html
@@ -2300,7 +2300,7 @@ R^{-1} A &amp;= \Lambda R^{-1} \\
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="qr-algorithm-for-solving-eigenvalues">QR algorithm for solving eigenvalues</h2>
-<p>QA algorithm is one of the most important numerical methods of the 20th century <a href=https://www.siam.org/pdf/news/637.pdf>link</a></p>
+<p>QR algorithm is one of the most important numerical methods of the 20th century <a href=https://www.siam.org/pdf/news/637.pdf>link</a></p>
 <p>Start with $A_0 = A$, then iterate:</p>
 <ul>
 <li>run a QR decomposition of $A_k$: $A_k = Q_kR_k$</li>
@@ -6968,7 +6968,7 @@ $$</p>
 <p>SVD offers clear intuitions in understanding the L-2 condition number of a Matrix $A$.</p>
 <p>For a linear system $\bs y = A \bs x$, consider a perturbation $\delta \bs x$ to the input $\bs x$:</p>
 <ul>
-<li>if $\delta \bs x$ is stretched by a larger factor than $\bs x$, then the reltative error grows.</li>
+<li>if $\delta \bs x$ is stretched by a larger factor than $\bs x$, then the relative error grows.</li>
 <li>the worst case occurs when $\bs x$ is stretched by $\sigma_n(A)$, while $\delta \bs x$ is stretched by $\sigma_1(A)$<ul>
 <li>the relative error grows by a factor of $\frac{\sigma_1(A)}{\sigma_n(A)}$.</li>
 </ul>
