Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 </td>
 <td align="center"><a href="https://github.com/yadongli" class="user-mention">@yadongli</a></td>
 </tr>
+<tr>
+<td align="center">4. Rootfinding &amp; Interpolation</td>
+<td align="center">
+<a href="Lecture4.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture4.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework4.ipynb">homework</a>
+</td>
+<td align="center"><a href="https://github.com/yadongli" class="user-mention">@yadongli</a></td>
+</tr>
 </tbody>
 </table>
 
