--- a/Lecture4.slides.html
+++ b/Lecture4.slides.html
@@ -8949,7 +8949,7 @@ AP5/p7vJx8fAImcAAAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Bootsrap-with-tension-spline">Bootsrap with tension spline<a class="anchor-link" href="#Bootsrap-with-tension-spline">&#182;</a></h2>
+<h2 id="Bootstrap-with-tension-spline">Bootstrap with tension spline<a class="anchor-link" href="#Bootstrap-with-tension-spline">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -9615,6 +9615,7 @@ IiJeoEZbRERERMQL/j+XiWp5UBn+kwAAAABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p>Iteration is an effective method for near triangular dependency:</p>
 <p>$$\bs x^{i+1} = f(\bs x^i)$$</p>
 <ul>
 <li>where $f(\cdot)$ represent the bootstrap operation, $\bs x^i$ is knot solutions</li>
@@ -9623,7 +9624,8 @@ IiJeoEZbRERERMQL/j+XiWp5UBn+kwAAAABJRU5ErkJggg==
 </ul>
 </div>
 </div>
-</div>
+</div></section><section>
+    
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input_hidden">
 <div class="input">
