--- a/Lecture4.slides.html
+++ b/Lecture4.slides.html
@@ -9647,8 +9647,7 @@ IiJeoEZbRERERMQL/j+XiWp5UBn+kwAAAABJRU5ErkJggg==
 </ul>
 </div>
 </div>
-</div></section><section>
-    
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input_hidden">
 <div class="input">
