--- a/Lecture4.slides.html
+++ b/Lecture4.slides.html
@@ -8925,7 +8925,7 @@ AP5/p7vJx8fAImcAAAAASUVORK5CYII=
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>How to remove the discontinuity in hazard rate?</p>
 <ul>
-<li>apply cubic spline to hazard rate seems to be a natural idea, but does it work?</li>
+<li>applying cubic spline to hazard rate seems to be a natural idea, does it work?</li>
 </ul>
 </div>
 </div>
@@ -9919,7 +9919,7 @@ K9AAAAAASUVORK5CYII=
 <p>The benchmark CDS won&#39;t reprice exactly after the bootstrapping with tension spline:</p>
 <ul>
 <li>Changes in longer maturity affects the shorter end of the curve</li>
-<li>The dependency matrix is no longer triangular</li>
+<li>The dependency matrix is no longer triangular, but close</li>
 </ul>
 </div>
 </div>
@@ -10087,7 +10087,7 @@ K9AAAAAASUVORK5CYII=
 <p>Mixing the old and new results between iterations improves stability:</p>
 <p>$$\bs x^{i+1} = m f(\bs x^i) + \left(1-m\right) \bs x^i$$</p>
 <ul>
-<li>$m = 0.5$ is the default choice</li>
+<li>$m = 0.5$ is often a good choice</li>
 </ul>
 </div>
 </div>
@@ -11275,7 +11275,7 @@ ADXGIiIiIiKAGmMREREREUCNsYiIiIgIoMZYRERERARQYywiIiIiAqgxFhEREREB1BiLiIiIiADw
 <h2 id="perturbation-locality">Perturbation locality</h2>
 <p>Changes in hazard rates are more localized with larger $\lambda$</p>
 <ul>
-<li>A highly sought after property in practice</li>
+<li>A highly desirable property in practice</li>
 </ul>
 </div>
 </div>
