--- a/Lecture4.slides.html
+++ b/Lecture4.slides.html
@@ -8941,7 +8941,7 @@ AP5/p7vJx8fAImcAAAAASUVORK5CYII=
 <p>The cumulative hazard $g(t)$ is a suitable variable for the tension spline interpolation:</p>
 <p>$$g(t) = \int_0^t h(s) ds = -\log(p(t))$$</p>
 <ul>
-<li>$g(t)$ is continuous and monotonic</li>
+<li>$g(t)$ is continuous and monotonic, 1 to 1 with $p(t)$</li>
 <li>$g(0) = 0$, the boundary condition is well defined</li>
 <li>$h(t) = g'(t)$ can be discountinous when $\lambda \rightarrow \infty$, this reverts to the standard method of piecewise flat hazard rate</li>
 <li>with finite $\lambda$, hazard rate is smooth and continuous</li>
