Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <td align="center">Ariye Shater, <a href="https://github.com/yadongli" class="user-mention">@yadongli</a>
 </td>
 </tr>
+<tr>
+<td align="center">6. Optimization</td>
+<td align="center">
+<a href="Lecture6_2016.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture6_2016.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework6_2016.ipynb">homework</a>
+</td>
+<td align="center"><a href="https://github.com/hcheng66" class="user-mention">@hcheng66</a></td>
+</tr>
 </tbody>
 </table>
 
