small changes to lecture 7

--- a/Lecture7_2016.slides.html
+++ b/Lecture7_2016.slides.html
@@ -1983,9 +1983,9 @@ s.t. \;\; \bx \in \mathcal{P} &amp; = \{\bx: \bs{A}\bx  \leq \bs{b}, \bx \geq 0 
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <ul>
-<li><p>Chapter 2 of the Reference book has very simple and clear example showing the Simplex Method</p>
+<li><p>Chapter 2 of the Reference book has a very clear example showing steps of the Simplex Method</p>
 </li>
-<li><p>Chapters 6 and 8 present a very good knowledge base of how Simplex method are implemented</p>
+<li><p>Chapters 6 and 8 present a very good knowledge base of how the Simplex method is implemented</p>
 </li>
 </ul>
 </div>
