--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 </td>
 <td align="center"><a href="https://github.com/hcheng66" class="user-mention">@hcheng66</a></td>
 </tr>
+<tr>
+<td align="center">7. Linear Programming</td>
+<td align="center">
+<a href="Lecture7_2016.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture7_2016.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework7_2016.ipynb">homework</a>
+</td>
+<td align="center"><a href="https://github.com/hcheng66" class="user-mention">@hcheng66</a></td>
+</tr>
 </tbody>
 </table>
 
