small change to Lect7

--- a/Lecture7_2016.slides.html
+++ b/Lecture7_2016.slides.html
@@ -2140,7 +2140,7 @@ $$</p>
 \begin{matrix}
 \bs{0} \\
 \bs{0} \\
--\bs{X} \bs{S} \bs{e} + \tau\gamma \bs{e}
+\tau\gamma \bs{e}
 \end{matrix}
 \right] \hspace{2in} (*)
 \end{matrix}
