--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 </td>
 <td align="center"><a href="https://github.com/hcheng66" class="user-mention">@hcheng66</a></td>
 </tr>
+<tr>
+<td align="center">8. Monte Carlo</td>
+<td align="center">
+<a href="Lecture6.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture6.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework6.ipynb">homework</a>
+</td>
+<td align="center"><a href="https://github.com/yadongli" class="user-mention">@yadongli</a></td>
+</tr>
 </tbody>
 </table>
 
