--- a/Lecture7.slides.html
+++ b/Lecture7.slides.html
@@ -13442,8 +13442,7 @@ RURERCRQYigiIiIiAPx/uphJOhd6SnsAAAAASUVORK5CYII=
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="assignment">Assignment</h1>
 <ul>
-<li>Work on your project</li>
-<li>Please shoot high, consider the Control Variate or Importance Sampling.</li>
+<li>Complete homework set 7</li>
 </ul>
 </div>
 </div>
