--- a/Lecture7.slides.html
+++ b/Lecture7.slides.html
@@ -13440,9 +13440,14 @@ RURERCRQYigiIiIiAPx/uphJOhd6SnsAAAAASUVORK5CYII=
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="assignment">Assignment</h1>
+<h1 id="assigment">Assigment</h1>
+<p>Recommented reading:</p>
 <ul>
-<li>Complete homework set 7</li>
+<li>Andersen and Piterbarg: Chapter 3.3-3.4</li>
+</ul>
+<p>Homework:</p>
+<ul>
+<li>Complete <a href="http://yadongli.github.io/nyumath2048">homework set 7</a></li>
 </ul>
 </div>
 </div>
