correction - credit to Oksana Kitaychik

--- a/Lecture6.slides.html
+++ b/Lecture6.slides.html
@@ -4199,7 +4199,7 @@ $$\small x(t) = x(t_0)e^{-\kappa (t-t_0)} + \bar x (1 - e^{-\kappa (t-t_0)}) + \
 <p>$$ dx_t = u(x_t)dt + \sigma(x_t) dw_t $$</p>
 <p>Observe that both $u(x_t)$ and $\sigma(x_t)$ are stochastic through $x_t$:</p>
 <p>$$ d u_s = (\cdot) ds + \dot u_s \sigma_s dw_s,  \;\; d\sigma_s = (\cdot) ds + \dot \sigma_s \sigma_s dw_s $$</p>
-<p>where $\dot u_s = \frac{du(x_s)}{dx_s}, \dot \sigma_s = \frac{du(\sigma_s)}{dx_s}$.</p>
+<p>where $\dot u_s = \frac{du(x_s)}{dx_s}, \dot \sigma_s = \frac{d\sigma(x_s)}{dx_s}$.</p>
 <p>All corrections are higher order than $d t$ except the $dw_s dw_t$ term (note $t &lt; u &lt; s &lt; t+\delta t$):</p>
 <p>$$ \delta x_t = u_t \delta t + \sigma_t \delta w_t + \int_t^{t+\delta t}\int_t^{s}\dot\sigma_u \sigma_s dw_u dw_s $$</p>
 </div>
