--- a/Lecture6.slides.html
+++ b/Lecture6.slides.html
@@ -4219,7 +4219,7 @@ $$ \small \begin{eqnarray}
 &amp;=&amp; \sigma_t\dot\sigma_t \left(\int_t^{t+\delta t} w_{s}dw_s - w_t(w_{t+\delta t} - w_t)\right)
 \end{eqnarray}$$</p>
 <p>Note that $\int w_t dw_t = \frac{1}{2}(w_t^2 - t)$, the term in the bracket becomes:
-$$ \small \frac{1}{2} (w_{t+\delta t}^2 - w_t^2) - \frac{1}{2}\delta t - w_t(w_{t+\delta t} - w_t) - \del= \frac{1}{2}(w_{t+\delta t} - w_t)^2 - \frac{\delta t}{2} \approx \frac{1}{2}(\delta^2w - \delta t) $$</p>
+$$ \small \frac{1}{2} (w_{t+\delta t}^2 - w_t^2) - \frac{1}{2}\delta t - w_t(w_{t+\delta t} - w_t) = \frac{1}{2}(w_{t+\delta t} - w_t)^2 - \frac{\delta t}{2} \approx \frac{1}{2}(\delta^2w - \delta t) $$</p>
 <p>This term vanishes for infinitesimal $dt$ but not for finited sample size $\delta t$. </p>
 </div>
 </div>
