--- a/index.html
+++ b/index.html
@@ -117,6 +117,13 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 </td>
 <td align="center"><a href="https://github.com/yadongli" class="user-mention">@yadongli</a></td>
 </tr>
+<tr>
+<td align="center">9. Variance Reduction</td>
+<td align="center">
+<a href="Lecture7.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture7.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework7.ipynb">homework</a>
+</td>
+<td align="center"><a href="https://github.com/yadongli" class="user-mention">@yadongli</a></td>
+</tr>
 </tbody>
 </table>
 
