--- a/index.html
+++ b/index.html
@@ -124,6 +124,13 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 </td>
 <td align="center"><a href="https://github.com/yadongli" class="user-mention">@yadongli</a></td>
 </tr>
+<tr>
+<td align="center">10. Entropy &amp; Allocation</td>
+<td align="center">
+<a href="Lecture10.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture10.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework10.ipynb">homework</a>
+</td>
+<td align="center"><a href="https://github.com/yadongli" class="user-mention">@yadongli</a></td>
+</tr>
 </tbody>
 </table>
 
