--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <tr>
 <td align="center">11. ODE</td>
 <td align="center">
-<a href="Lecture11.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture11.ipynb">ipynb</a>)</td>
+<a href="Lecture11.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture11.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework11.ipynb">homework</a>
+</td>
 <td align="center"><a href="https://github.com/hcheng66" class="user-mention">@hcheng66</a></td>
 </tr>
 </tbody>
