Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -138,6 +138,13 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 </td>
 <td align="center"><a href="https://github.com/hcheng66" class="user-mention">@hcheng66</a></td>
 </tr>
+<tr>
+<td align="center">12. PDE</td>
+<td align="center">
+<a href="Lecture12.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture12.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework12.ipynb">homework</a>
+</td>
+<td align="center"><a href="https://github.com/hcheng66" class="user-mention">@hcheng66</a></td>
+</tr>
 </tbody>
 </table>
 
