--- a/Lecture12.slides.html
+++ b/Lecture12.slides.html
@@ -1822,14 +1822,18 @@ Populating the interactive namespace from numpy and matplotlib
 <li>Discretization</li>
 <li>Finite Difference Methods</li>
 <li>The Explicit Methods</li>
-<li>Consistency, Stability and Convergence</li>
 <li>The Implicit Methods</li>
 <li>The Crank-Nicholson Method</li>
+<li>Consistency, Stability and Convergence</li>
 </ul>
 </li>
 </ul>
 <ul>
-<li>Numerical Examples</li>
+<li>Numerical Examples<ul>
+<li>Vanilla European Call</li>
+<li>Up-And-Out Barrier Call</li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
