--- a/ClassPolicies.slides.html
+++ b/ClassPolicies.slides.html
@@ -1589,8 +1589,10 @@ span#checkpoint_status,span#autosave_status{font-size:small}
 .highlight .err { border: 1px solid #FF0000 } /* Error */
 .highlight .k { color: #008000; font-weight: bold } /* Keyword */
 .highlight .o { color: #666666 } /* Operator */
+.highlight .ch { color: #408080; font-style: italic } /* Comment.Hashbang */
 .highlight .cm { color: #408080; font-style: italic } /* Comment.Multiline */
 .highlight .cp { color: #BC7A00 } /* Comment.Preproc */
+.highlight .cpf { color: #408080; font-style: italic } /* Comment.PreprocFile */
 .highlight .c1 { color: #408080; font-style: italic } /* Comment.Single */
 .highlight .cs { color: #408080; font-style: italic } /* Comment.Special */
 .highlight .gd { color: #A00000 } /* Generic.Deleted */
@@ -1811,13 +1813,9 @@ $(document).ready(function(){
 <li>both parties will be punished(we can&#39;t and don&#39;t want to distinguish who copied whom)</li>
 </ul>
 </li>
-<li>Copying from previous&#39; year&#39;s homework solution is also considered cheating. </li>
+<li>Copying from previous&#39; year&#39;s homework solution is a form of cheating.</li>
 </ul>
-<p>We will actively police cheating:</p>
-<ul>
-<li>First time cheating in homework: receive 0 for the homework, which will count towards your final score</li>
-<li>Second time cheating in homework: fail the class</li>
-</ul>
+<p>We will actively police cheating, cheaters will be severely punished, up to failing the class. </p>
 </div>
 </div>
 </div></section>
@@ -1957,6 +1955,15 @@ Reveal.initialize({
      // height: 100%,
      // margin: 0,
      theme: 'white', // available themes are in /css/theme
+});
+
+// remap F5/ESC/b key
+Reveal.configure({
+  keyboard: {
+    66: 'right',
+    116: 'left',
+    27: 'left'
+  }
 });
 
 </script>
