--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -9,7 +9,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-<title>lecture1 slides</title>
+<title>Lecture1 slides</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -1733,8 +1733,7 @@ div.output_prompt {
 <h1 id="scientific-computing-in-finance">Scientific Computing in Finance</h1>
 <ul>
 <li>MATH-GA 2048, Spring 2017</li>
-<li>Courant Institute of Mathematical Sciences</li>
-<li>New York University</li>
+<li>Courant Institute of Mathematical Sciences, New York University</li>
 </ul>
 </div>
 </div>
@@ -1878,13 +1877,13 @@ div.output_prompt {
 <td style="text-align:center">9-10</td>
 <td style="text-align:center">Optimization</td>
 <td style="text-align:center">Model calibration</td>
-<td style="text-align:center">H. Cheng</td>
+<td style="text-align:center">W. Lou</td>
 </tr>
 <tr>
 <td style="text-align:center">11-12</td>
 <td style="text-align:center">ODE/PDE</td>
 <td style="text-align:center">Pricing</td>
-<td style="text-align:center">H. Cheng</td>
+<td style="text-align:center">W. Lou</td>
 </tr>
 <tr>
 <td style="text-align:center">13</td>
