--- a/ClassPolicies.slides.html
+++ b/ClassPolicies.slides.html
@@ -1770,8 +1770,7 @@ $(document).ready(function(){
 <h2 id="homework">Homework</h2>
 <p>Homework is assigned weekly at the end of the lecture</p>
 <ul>
-<li>Due before the start of the next lecture</li>
-<li>You should complete your homework on your own, homework is not a team exercise</li>
+<li>Homework can be completed by groups of two, you can form your own groups. However, you are strongly encouraged to complete homework on your own.</li>
 <li>In general, late homework won&#39;t be accepted. Exceptions will only be made if certain event affects multiple students (e.g., a super-day interview, or a firm event).</li>
 <li>One lowest scored homework won&#39;t count towards your final homework score</li>
 </ul>
