--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -1929,10 +1929,9 @@ div.output_prompt {
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="lecture-notes-and-homework">Lecture notes and homework</h2>
 <p>Available online at: <a href="http://yadongli.github.io/nyumath2048">http://yadongli.github.io/nyumath2048</a></p>
-<h2 id="grades-tentative-">Grades (tentative)</h2>
+<h2 id="grading">Grading</h2>
 <ul>
-<li>Homework 30%</li>
-<li>Project (tentative 20%, we may cancel project and move this portion to the homework)</li>
+<li>Homework 50%, can be done by groups of two students</li>
 <li>Final 50% </li>
 <li>Extra credits <ul>
 <li>extra credit homework problems</li>
@@ -2121,6 +2120,9 @@ div.output_prompt {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>In practice, what often trumps everything else is: </p>
 <h2 id="time-to-market-">Time to market !!</h2>
+<ul>
+<li>First mover has significant advantage: Facebook, Google etc.</li>
+</ul>
 </div>
 </div>
 </div></section><section>
@@ -2208,6 +2210,7 @@ div.output_prompt {
 <h4 id="freedom-is-slavery">Freedom is slavery</h4>
 <ul>
 <li>Must be disciplined in testing, code review, releases etc. </li>
+<li>Limit the interface of your module (or external commitments)</li>
 <li>Freedom $\rightarrow$ possibilities $\rightarrow$ complexity $\rightarrow$ unmodifiable code $\rightarrow$ slavery</li>
 </ul>
 </div>
@@ -2305,8 +2308,8 @@ div.output_prompt {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Python resources</p>
 <ul>
+<li>Anaconda: a popular Python distribution with essential packages, best choice</li>
 <li>Enthought Canopy: a commercial Python distribution, free for students</li>
-<li>Anaconda: another popular and free Python distribution</li>
 <li>Google and Youtube</li>
 </ul>
 <p>Python version:</p>
