--- a/Lecture3.slides.html
+++ b/Lecture3.slides.html
@@ -6991,7 +6991,7 @@ $$</p>
 <p>When working with near singular matrix,  SVD can identify ill-conditioned area:</p>
 <ul>
 <li>real world covariance and correlation matrix are often near singular</li>
-<li>numerical stability arises when inputs are very close to signular vectors with small singular values <ul>
+<li>numerical instability arises when inputs are very close to signular vectors with small singular values <ul>
 <li>e.g, when return forecast is in the same direction as the last singular vector ...</li>
 </ul>
 </li>
