--- a/Lecture5.slides.html
+++ b/Lecture5.slides.html
@@ -2440,9 +2440,9 @@ $$</p>
 <h2 id="compute-deltas-numerically">Compute deltas numerically</h2>
 <p>Steps to compute $\frac{\partial v}{\partial \bs q}$ numerically:</p>
 <ul>
-<li>bump the quoted spread of one tenor point $q_i$ by a small amount (e.g., 1bps), re-bootstrap the whole CDS curve<ul>
+<li>bump one tenor point $q_i$, re-bootstrap the whole CDS curve<ul>
 <li>for each tenor point <code>j=1:maturity</code><ul>
-<li>root search the knot value of the hazard rate $h_j$, for each trial value of $h_j$<ul>
+<li>root search the knot of hazard rate $h_j$, for each trial value of $h_j$<ul>
 <li>build tension spline interpolation on the whole hazard rate term structure $\bs h$</li>
 <li>price the benchmark CDS instrument $b_j$, </li>
 <li>continue root search until $b_j$ matches the market price to a high precision</li>
