various error corrections

--- a/Lecture4.slides.html
+++ b/Lecture4.slides.html
@@ -5746,7 +5746,8 @@ $$</p>
 <h2 id="exponential-tension-spline">Exponential tension spline</h2>
 <p>A tension spline is originally defined as: $f^{(4)}(x) - \lambda f''(x) = 0$</p>
 <ul>
-<li>it models a physical spline stretchd by a tension force of $\lambda$</li>
+<li>it models a physical spline stretchd by a tension force </li>
+<li>$\lambda$ is the ratio of the tension force over the rigidity of the spline</li>
 <li>it reduces to cubic spline when $\lambda = 0$</li>
 <li>with $\lambda \rightarrow \infty$, the spline is streched to piece-wise straight lines</li>
 <li>the solution is a combination of exponential and linear functions of $x$</li>
@@ -8431,7 +8432,7 @@ $$p(t) = e^{-\int_0^t h(s) ds}$$</p>
 <tbody>
 <tr>
 <td style="text-align:center">$q(3m)$</td>
-<td style="text-align:center">*</td>
+<td style="text-align:center">X</td>
 <td style="text-align:center"></td>
 <td style="text-align:center"></td>
 <td style="text-align:center"></td>
@@ -8440,7 +8441,7 @@ $$p(t) = e^{-\int_0^t h(s) ds}$$</p>
 <tr>
 <td style="text-align:center">$q(6m)$</td>
 <td style="text-align:center">*</td>
-<td style="text-align:center">*</td>
+<td style="text-align:center">X</td>
 <td style="text-align:center"></td>
 <td style="text-align:center"></td>
 <td style="text-align:center"></td>
@@ -8449,7 +8450,7 @@ $$p(t) = e^{-\int_0^t h(s) ds}$$</p>
 <td style="text-align:center">$q(1Y)$</td>
 <td style="text-align:center">*</td>
 <td style="text-align:center">*</td>
-<td style="text-align:center">*</td>
+<td style="text-align:center">X</td>
 <td style="text-align:center"></td>
 <td style="text-align:center"></td>
 </tr>
@@ -8458,7 +8459,7 @@ $$p(t) = e^{-\int_0^t h(s) ds}$$</p>
 <td style="text-align:center">*</td>
 <td style="text-align:center">*</td>
 <td style="text-align:center">*</td>
-<td style="text-align:center">*</td>
+<td style="text-align:center">X</td>
 <td style="text-align:center"></td>
 </tr>
 <tr>
@@ -8467,7 +8468,7 @@ $$p(t) = e^{-\int_0^t h(s) ds}$$</p>
 <td style="text-align:center">*</td>
 <td style="text-align:center">*</td>
 <td style="text-align:center">*</td>
-<td style="text-align:center">*</td>
+<td style="text-align:center">X</td>
 </tr>
 </tbody>
 </table>
